logs/Slang/generated/hdlconv/hdlconvertor_p713.sv.log
name: hdlconvertor_p713
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p713.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p713.sv:7:1: error: unknown module 'alu'
alu
^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p713.sv:10:1: error: unknown module 'accum'
accum accum (.dataout(dataout[7:0]), .datain(alu_out), .clk, .rst_n());
^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p713.sv:11:1: error: unknown module 'xtend'
xtend xtend (.dout(dataout[15:8]), .din(alu_out[7]), .clk, .rst);
^~~~~
